Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15247

"Folder options" : French translation missing for window caption

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.12
    • Shell
    • None

    Description

      "Folder options" : French translation missing for window caption

       

      Should be "Options des dossiers"

      Attachments

        1. french-after.png
          french-after.png
          57 kB
        2. french-before.png
          french-before.png
          56 kB
        3. Sans titre.png
          Sans titre.png
          23 kB

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            Kyle_Katarn Kyle_Katarn
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: