[SHELL32] Localize caption of Folder Options

CORE-15247